added info to journey section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Technical Skills</a></li>
 							<li><a href="#second">Projects</a></li>
-							<!-- <li><a href="#cta">Get Started</a></li> -->
+							<!-- <li><a href="#cta">Get Started</a></li>~ -->
 						</ul>
 					</nav>
 
